--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ngrx/effects": "^20.0.1",
     "@ngrx/store": "^20.0.1",
     "@primeuix/themes": "^1.2.5",
     "file-saver": "^2.0.5",
@@ -46,6 +47,7 @@
     "@angular/compiler-cli": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.15",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.12",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
